# bad-bowling-kata

./: .gitignore  .mergify.yml  README.md  bowling_game.py
.github/: dependabot.yml
.github/workflows/: ci.yml  java.yml  javascript.yml  php.yml  python.yml
java/: .gitignore  README.md  build.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/com/armakuni/: BowlingGame.java
java/src/test/java/com/armakuni/: BowlingGameTest.java
java/src/test/resources/: test-help.txt
javascript/: README.md  bowlingGame.js  bowlingGame.test.js  package-lock.json  package.json
php/: README.md  composer.json  phpunit.xml
php/src/: BowlingGame.php
php/tests/: BowlingGameTest.php
python/: Pipfile  README.md  bowling_game.py  pyproject.toml  test_bowling_game.py
python/python/: bowling_game.py
